Now using Vulkan for rendering